# autoworker-youtube

./: .env.example  .gitignore  pyproject.toml
config/: default.yaml
config/prompts/: analysis.jinja2  script_generation.jinja2
config/templates/: product_intro.yaml
src/autoworker_youtube/: __init__.py  __main__.py  cli.py
src/autoworker_youtube/core/: config.py  exceptions.py  models.py  pipeline.py
src/autoworker_youtube/planner/: topic_selector.py
src/autoworker_youtube/services/: audio.py  capcut.py  image.py  image_ai.py  llm.py  subtitle.py  tts.py  video.py  youtube.py
src/autoworker_youtube/sources/: google_news.py  google_trends.py  youtube_trending.py
src/autoworker_youtube/stages/: base.py  s1_input.py  s2_analysis.py  s3_script.py  s4_assets.py  s5_assembly.py  s6_output.py
src/autoworker_youtube/universe/: episode.py  renderer.py  world.py
tests/test_services/: test_capcut.py  test_image_ai.py  test_models.py  test_youtube.py
