[project]
name = "autoworker-youtube"
version = "0.1.0"
description = "Automatically generate introduction videos from YouTube URLs or trending topics"
requires-python = ">=3.11"
dependencies = [
    "yt-dlp>=2024.0",
    "youtube-transcript-api>=0.6.0",
    "google-api-python-client>=2.100.0",
    "anthropic>=0.40.0",
    "edge-tts>=6.1.0",
    "ffmpeg-python>=0.2.0",
    "moviepy>=1.0.3",
    "Pillow>=10.0.0",
    "pydub>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer[all]>=0.12.0",
    "jinja2>=3.1.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.0",
    "pytrends>=4.9.0",
    "GoogleNews>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
ai-images = [
    "openai>=1.0",
    "requests>=2.31",
]

[project.scripts]
autoworker = "autoworker_youtube.cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
